@@ -1,0 +1,15 @@
+
+err = open("test", "read")
+if (err <> 0) then print "error: unable to open file" : end
+print "file: opened"
+
+str$ = read
+print str$
+
+err = write("Error")
+if (err = 0) then print "error: able to write to file opened for read"
+
+err = close
+print "file: closed"
+
+
